# repx

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  default.nix  flake.nix
.github/workflows/: docs.yml  main.yml  pr-check.yml  release.yml
crates/: README.md
crates/repx-cli/: Cargo.toml
crates/repx-cli/src/: init.rs  main.rs
crates/repx-cli/templates/init/: flake.nix
crates/repx-cli/templates/init/nix/: lab.nix  pipeline.nix  run.nix  stage-hello.nix
crates/repx-client/: Cargo.toml
crates/repx-client/src/: client.rs  error.rs  inputs.rs  lib.rs  orchestration.rs  resources.rs  submission.rs  tar_extract.rs
crates/repx-client/src/client/: local.rs  scheduler.rs  slurm.rs  status.rs
crates/repx-client/src/targets/: common.rs  local.rs  mod.rs  remote_command.rs  ssh.rs
crates/repx-client/tests/: cancellation_tests.rs  continue_on_failure.rs  data_only_local.rs  smart_sync_tests.rs  wave_scheduler.rs
crates/repx-core/: Cargo.toml
crates/repx-core/src/: cache.rs  config.rs  constants.rs  engine.rs  errors.rs  fs_utils.rs  lab.rs  lib.rs  logging.rs  model.rs  path_safety.rs  protocol.rs  resolver.rs  theme.rs
crates/repx-core/src/defaults/: config.toml  resources.toml
crates/repx-core/src/store/: artifacts.rs  completion_log.rs  mod.rs  outcomes.rs  timing.rs
crates/repx-executor/: Cargo.toml
crates/repx-executor/src/: context.rs  error.rs  lib.rs  util.rs
crates/repx-executor/src/runtime/: bwrap.rs  container.rs  mod.rs  native.rs
crates/repx-executor/tests/: executor_tests.rs  unit_tests.rs
crates/repx-runner/: Cargo.toml
crates/repx-runner/src/: cli.rs  error.rs  lib.rs  main.rs
crates/repx-runner/src/commands/: execute.rs  gc.rs  internal.rs  list.rs  log.rs  mod.rs  run.rs  scatter_gather.rs  show.rs  trace.rs
crates/repx-runner/src/commands/scatter_gather/: inputs.rs  mod.rs  slurm.rs  tests.rs  toposort.rs
crates/repx-runner/tests/: bwrap_tests.rs  component_tests.rs  docker_tests.rs  e2e_tests.rs  gc_tests.rs  harness.rs  podman_tests.rs  regression_tests.rs
crates/repx-test-utils/: Cargo.toml
crates/repx-test-utils/src/: harness.rs  lib.rs
crates/repx-tui/: Cargo.toml
crates/repx-tui/src/: app.rs  error.rs  event.rs  lib.rs  main.rs  model.rs  screenshot.rs  style.rs  tree_view.rs  ui.rs
crates/repx-tui/src/app/: jobs.rs  targets.rs
crates/repx-tui/src/widgets/: braille_graph.rs  color.rs  mod.rs  stacked_bar_chart.rs  tree_prefix.rs
crates/repx-viz/: Cargo.toml
crates/repx-viz/src/: dot.rs  generator.rs  helpers.rs  lib.rs
docs/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/docs/analyzing-results/: python-analysis.md  visualization.md
docs/docs/contributing/: architecture.md  development-setup.md  release-process.md  testing.md
docs/docs/examples/: advanced-patterns.md  impure-incremental.md  parameter-sweep.md  simple-pipeline.md
docs/docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/docs/reference/: cli-reference.md  nix-functions.md  python-api.md
docs/docs/running-experiments/: configuration.md  containerization.md  garbage-collection.md  local-execution.md  remote-execution.md  tui.md
docs/docs/user-guide/: building-labs.md  defining-experiments.md  dependencies.md  parameters.md  pipelines.md  stages.md
docs/src/components/: Image.tsx
docs/src/css/: custom.css
docs/src/pages/: index.tsx
examples/impure-incremental/: .gitignore  flake.nix
examples/impure-incremental/nix/: lab.nix  overlay.nix  pipeline-make.nix  run-build.nix  stage-make.nix
examples/impure-incremental/src/: Makefile  file1.c  file2.c  main.c
examples/impure-incremental/tools/: nix-acl.sh
examples/param-sweep/: flake.nix
examples/param-sweep/nix/: lab.nix  pipe-plot.nix  pipe-sweep.nix  run-plot.nix  run-sweep.nix  stage-generator.nix  stage-plotter.nix
examples/reference/: flake.nix  overlays.nix
examples/simple/: flake.nix
examples/simple/nix/: lab.nix  pipe-analysis.nix  pipe-sim.nix  run-analysis.nix  run-simulation.nix  stage-plotter.nix  stage-producer.nix  stage-summer.nix
lib/: stage-scatter-gather.nix  stage-simple.nix
lib/internal/: call-stage.nix
nix/: README.md  apps.nix  checks.nix  formatters.nix  labs.nix  overlay.nix  termframe.nix
nix/checks/: check-examples.nix
nix/checks/lib/: check-buildcommand-size.nix  check-container-mode.nix  check-deps.nix  check-dynamic-params-validation.nix  check-hash-mode.nix  check-image-closure.nix  check-integration.nix  check-invalidation.nix  check-large-lab.nix  check-non-scalar-params.nix  check-params-list.nix  check-params.nix  check-pipeline-logic.nix  check-repx-examples.nix  check-resource-hints.nix  check-stage-env-size.nix  check-zip-params.nix
nix/checks/lint/: clippy.nix  formatting.nix  machete.nix
nix/checks/runtime/: e2e-bwrap-overlay-fallback.nix  e2e-examples.nix  e2e-gc-local.nix  e2e-gc-remote.nix  e2e-impure-docker.nix  e2e-impure-podman.nix  e2e-impure.nix  e2e-incremental-sync.nix  e2e-init.nix  e2e-internal-logs.nix  e2e-local-bwrap-impure.nix  e2e-local-bwrap-lab-tar.nix  e2e-local-bwrap-mount-paths.nix  e2e-local-bwrap-node-local-path.nix  e2e-local-bwrap-pure.nix  e2e-local-docker-impure.nix  e2e-local-docker.nix  (+50 more)
nix/docs/: assets.nix  build-versioned.nix  default.nix
nix/formatters/: clippy.nix  machete.nix
nix/lib/: lab-packagers.nix  lab.nix  metadata.nix  readme.nix  stage-scatter-gather.nix  stage-simple.nix  utils.nix
nix/lib/crates/repx-expand/: Cargo.toml
nix/lib/crates/repx-expand/src/: blueprint.rs  cartesian.rs  expand.rs  io.rs  main.rs  metadata.rs  nix32.rs  tests.rs  util.rs
nix/nix/: checks.nix
nix/patches/: termframe-local-fonts.patch
nix/pkgs/: repx-py.nix  repx-rs.nix  repx.nix
nix/reference-lab/: lab-mount-paths.nix  lab-native.nix  lab.nix
python/: README.md  default.nix
python/src/: pyproject.toml
python/src/repx_py/: __init__.py  models.py  visualize.py
python/src/repx_py/cli/: debug_runner.py  trace_params.py
python/src/tests/: test_cli.py  test_edge_cases.py  test_models.py  test_visualize.py
(+49 files in other folders)
