[workspace]
resolver = "2"
members = [
  "crates/repx-runner",
  "crates/repx-core",
  "crates/repx-executor",
  "crates/repx-client",
  "crates/repx-tui",
  "crates/repx-cli",
  "crates/repx-viz",
  "crates/repx-test-utils",
]

[workspace.package]
version = "0.2.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/repx-org/repx"

[workspace.dependencies]
repx-core = { path = "crates/repx-core" }
repx-client = { path = "crates/repx-client" }
repx-executor = { path = "crates/repx-executor" }
repx-runner = { path = "crates/repx-runner" }
repx-tui = { path = "crates/repx-tui" }
repx-viz = { path = "crates/repx-viz" }
repx-test-utils = { path = "crates/repx-test-utils" }

fs-err = "3.3"
async-trait = "0.1.89"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1"
comfy-table = "7.2"
crossterm = "0.29.0"
futures = "0.3.32"
indicatif = "0.18"
log = "0.4.29"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std"] }
num_cpus = "1.17.0"
once_cell = "1.21.3"
regex = "1.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.26.0"
thiserror = "2.0"
tokio = { version = "1.49.0", features = ["full"] }
walkdir = "2.5"
xdg = "3.0.0"
sha2 = "0.10.9"
rayon = "1.11"
toml = "1.0.3"
ctrlc = "3.5.2"
rand = "0.10.0"
whoami = "2.1.1"
nix = { version = "0.29.0", features = ["signal", "fs"] }
shellexpand = "3.1.2"
anyhow = "1.0"
uuid = { version = "1.21.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
sysinfo = "0.32"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
