[package]
name = "repx-cli"
version = { workspace = true }
edition = { workspace = true }
description = "Reproducible HPC Experiments Framework CLI"
license = "MIT"
repository = "https://github.com/repx-org/repx"

[package.metadata.deb]
name = "repx"
maintainer = "RepX Maintainers <maintainers@repx.org>"
copyright = "2024, RepX Org"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/repx", "usr/bin/", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "../../target/release/repx", dest = "/usr/bin/repx", mode = "755" },
]

[[bin]]
name = "repx"
path = "src/main.rs"

[dependencies]
repx-runner = { workspace = true }
repx-tui = { workspace = true }
repx-core = { workspace = true }
repx-viz = { workspace = true }
clap = { workspace = true, features = ["derive"] }
colored = { workspace = true }
which = "6.0"
clap_complete = "4.5.65"
