[package]
name = "repx-client"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
repx-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
thiserror = { workspace = true }
fs-err = { workspace = true }
chrono = { workspace = true }
xdg = { workspace = true }
whoami = { workspace = true }
wildmatch = "2.6"
tempfile = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }
num_cpus.workspace = true
comfy-table = { workspace = true }

[dev-dependencies]
