[package]
name = "repx-core"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
chrono = { workspace = true, features = ["serde"] }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
xdg = { workspace = true }
shellexpand = { workspace = true }
