[package]
name = "repx-executor"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
repx-core = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
nix = { workspace = true, features = ["fs"] }
tempfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
