[package]
name = "repx-runner"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "repx-runner"
path = "src/main.rs"

[dependencies]
repx-core = { workspace = true }
repx-client = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
colored = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
repx-executor = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
futures = { workspace = true }
num_cpus = { workspace = true }
thiserror = { workspace = true }


[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = { workspace = true }
repx-client = { workspace = true }
repx-core = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
repx-test-utils = { workspace = true }
