[package]
name = "repx-tui"
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "repx_tui"
path = "src/lib.rs"

[[bin]]
name = "repx-tui"
path = "src/main.rs"

[dependencies]
repx-core = { workspace = true }
repx-client = { workspace = true }
crossterm = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
ratatui = { version = "0.29.0", features = ["crossterm"] }
clap = { workspace = true, features = ["derive"] }
nix = { workspace = true, features = ["signal"] }
xdg = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
fs-err = { workspace = true }
toml = { workspace = true }
shellexpand = { workspace = true }
num_cpus = { workspace = true }
arboard = { version = "3.6", features = ["wayland-data-control"] }
