[package]
name = "repx-viz"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
repx-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
regex = { workspace = true }
colored = { workspace = true }
log = { workspace = true }
lazy_static = "1.4"
