[project]
name = "repx-py"
version = "0.3.0"
description = "A library for analyzing RepX lab results."
dependencies = [
    "pandas",
]

[project.scripts]
debug-runner = "repx_py.cli.debug_runner:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["repx_py*"]
