[workspace]

[package]
name = "repx-expand"
version = "0.1.0"
edition = "2021"
description = "Scalable job expansion engine for repx labs"

[[bin]]
name = "repx-expand"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rayon = "1.10"
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
